testing/framework/resources/Functional/Passing/json_bracketless/json_bracketless8.q
select cast(convert_to(`integer`, 'JSON') as integer) from `input2.json`;
