testing/framework/resources/Functional/Failing/datetime/datetime77.q
select date_add(cast(c_date as date), cast(c_time as time)) from basic;
